syntax = "proto3";

option go_package = "github.com/dokyan1989/goit/app/hellogrpc/pb";
package goit.app.hellogrpc.pb;

import "google/api/annotations.proto";
import "buf/validate/validate.proto";
import "google/protobuf/wrappers.proto";

//-------------------------end generated header---------------------------//

// TodoManagement
service TodoManagement {
  // CreateTodo
  rpc CreateTodo(CreateTodoRequest) returns (CreateTodoResponse) {
    option (google.api.http) = {
      post : "/api/v1/todos",
      body : "*"
    };
  }

  // UpdateTodo
  rpc UpdateTodo(UpdateTodoRequest) returns (UpdateTodoResponse) {
    option (google.api.http) = {
      put : "/api/v1/todos/{id}",
      body : "*"
    };
  }

  // GetTodo
  rpc GetTodo(GetTodoRequest) returns (GetTodoResponse) {
    option (google.api.http) = {
      get : "/api/v1/todos/{id}"
    };
  }

  // ListTodos
  rpc ListTodos(ListTodosRequest) returns (ListTodosResponse) {
    option (google.api.http) = {
      get : "/api/v1/todos"
    };
  }

  // DeleteTodo
  rpc DeleteTodo(DeleteTodoRequest) returns (DeleteTodoResponse) {
    option (google.api.http) = {
      delete : "/api/v1/todos/{id}"
    };
  }
}

// CreateTodoRequest
message CreateTodoRequest {
  // title
  string title = 1 [ (buf.validate.field).string.min_len = 1 ];
  // status
  string status = 2 [
    (buf.validate.field).string.in = "UNKNOWN",
    (buf.validate.field).string.in = "NEW",
    (buf.validate.field).string.in = "DOING",
    (buf.validate.field).string.in = "PENDING",
    (buf.validate.field).string.in = "DONE"
  ];
}

// CreateTodoResponse
message CreateTodoResponse {
  /****** internal messages ******/
  // Data
  message Data { int64 id = 1; }

  /****** fields ******/
  // message
  string message = 1;
  // data
  Data data = 2;
}

// UpdateTodoRequest
message UpdateTodoRequest {
  // id
  int64 id = 1;
  // title
  string title = 2 [ (buf.validate.field).string.min_len = 1 ];
  // status
  string status = 3 [
    (buf.validate.field).string.in = "UNKNOWN",
    (buf.validate.field).string.in = "NEW",
    (buf.validate.field).string.in = "DOING",
    (buf.validate.field).string.in = "PENDING",
    (buf.validate.field).string.in = "DONE"
  ];
}

// UpdateTodoResponse
message UpdateTodoResponse {
  /****** internal messages ******/
  // Data
  message Data { int64 id = 1; }

  /****** fields ******/
  // message
  string message = 1;
  // data
  Data data = 2;
}

// GetTodoRequest
message GetTodoRequest {
  // id
  int64 id = 1;
}

// GetTodoResponse
message GetTodoResponse {
  /****** internal messages ******/
  // Data
  message Data { Todo todo = 1; }

  /****** fields ******/
  // message
  string message = 1;
  // data
  Data data = 2;
}

// ListTodosRequest
message ListTodosRequest {
  // ids
  repeated int64 ids = 1;
  // status
  google.protobuf.StringValue status = 2;
  // limit
  int32 limit = 3;
  // offset
  int32 offset = 4;
}

// ListTodosResponse
message ListTodosResponse {
  /****** internal messages ******/
  // Data
  message Data { repeated Todo todos = 1; }

  /****** fields ******/
  // message
  string message = 1;
  // data
  Data data = 2;
}

// DeleteTodoRequest
message DeleteTodoRequest {
  // id
  int64 id = 1;
}

// DeleteTodoResponse
message DeleteTodoResponse {
  /****** internal messages ******/
  // Data
  message Data { int64 id = 1; }

  /****** fields ******/
  // message
  string message = 1;
  // data
  Data data = 2;
}

// Todo
message Todo {
  // id
  int64 id = 1;
  // title
  string title = 2;
  // status
  string status = 3;
}